Adding ATMOSPHERIC_PRESSURE sensor

--- a/custom_components/ARSO_weather/translations/en.json
+++ b/custom_components/ARSO_weather/translations/en.json
@@ -4,8 +4,7 @@
             "user": {
                 "description": "If you need help with the configuration have a look here: https://github.com/ARosman77/ARSO_weather",
                 "data": {
-                    "username": "Username",
-                    "password": "Password"
+                    "location": "Location"
                 }
             }
         },
