Fixing multiple regions

--- a/custom_components/ARSO_weather/translations/en.json
+++ b/custom_components/ARSO_weather/translations/en.json
@@ -4,8 +4,8 @@
             "user": {
                 "description": "You need to choose location for the current meteo data and region for the forcast.",
                 "data": {
-                    "location": "Location",
-                    "region": "Region"
+                    "meteo_location": "Location",
+                    "meteo_region": "Region"
                 }
             }
         },
